--- a/listener-server/package.json
+++ b/listener-server/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.1"
   }
 }
