--- a/listener-server/package.json
+++ b/listener-server/package.json
@@ -31,6 +31,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "rcon-client": "^4.2.3"
   }
 }
