Craftable Thaumium armor fix.

--- a/modpack-files/src/config/tinkeredhegemony.cfg
+++ b/modpack-files/src/config/tinkeredhegemony.cfg
@@ -989,13 +989,13 @@ disableditems {
     B:"tconstruct:slime_boots"=true
 
     #  [default: true]
-    B:"thaumcraft:cloth_boots"=true
+    B:"thaumcraft:cloth_boots"=false
 
     #  [default: true]
-    B:"thaumcraft:cloth_chest"=true
+    B:"thaumcraft:cloth_chest"=false
 
     #  [default: true]
-    B:"thaumcraft:cloth_legs"=true
+    B:"thaumcraft:cloth_legs"=false
 
     #  [default: true]
     B:"thaumcraft:crimson_blade"=true
@@ -1061,19 +1061,19 @@ disableditems {
     B:"thaumcraft:thaumium_axe"=true
 
     #  [default: true]
-    B:"thaumcraft:thaumium_boots"=true
+    B:"thaumcraft:thaumium_boots"=false
 
     #  [default: true]
-    B:"thaumcraft:thaumium_chest"=true
+    B:"thaumcraft:thaumium_chest"=false
 
     #  [default: true]
-    B:"thaumcraft:thaumium_helm"=true
+    B:"thaumcraft:thaumium_helm"=false
 
     #  [default: true]
     B:"thaumcraft:thaumium_hoe"=true
 
     #  [default: true]
-    B:"thaumcraft:thaumium_legs"=true
+    B:"thaumcraft:thaumium_legs"=false
 
     #  [default: true]
     B:"thaumcraft:thaumium_pick"=true
