Updated OC configuration.

--- a/modpack-files/src/config/opencomputers/settings.conf
+++ b/modpack-files/src/config/opencomputers/settings.conf
@@ -68,17 +68,17 @@ opencomputers {
     # hologramRenderDistance). This is purely cosmetic, to avoid image
     # disappearing instantly when moving too far away from a projector.
     # It does not affect performance. Holograms are transparent anyway.
-    hologramFadeStartDistance=48
+    hologramFadeStartDistance=96
 
     # This controls how often holograms 'flicker'. This is the chance that it
     # flickers for *each frame*, meaning if you're running at high FPS you
     # may want to lower this a bit, to avoid it flickering too much.
-    hologramFlickerFrequency=0.025
+    hologramFlickerFrequency=0.005
 
     # The maximum render distance of a hologram projected by a highest tier
     # hologram projector when at maximum scale. Render distance is scaled
     # down with the actual scale of the hologram.
-    hologramRenderDistance=64
+    hologramRenderDistance=128
 
     # The maximum distance at which to render text on screens. Rendering text
     # can be pretty expensive, so if you have a lot of screens you'll want to
@@ -139,9 +139,9 @@ opencomputers {
     # machine / server, at the cost of slower computers. This list must
     # contain exactly three entries, or it will be ignored.
     callBudgets=[
-      0.5,
-      1,
-      1.5
+      2,
+      4,
+      6
     ]
 
     # This determines whether computers can only be used by players that are
@@ -158,7 +158,7 @@ opencomputers {
     # are treated as if they were in the user list of every computer, i.e. no
     # restrictions apply to them.
     # See also: `maxUsers` and `maxUsernameLength`.
-    canComputersBeOwned=true
+    canComputersBeOwned=false
 
     # The number of components the different CPU tiers support. This list
     # must contain exactly four entries, or it will be ignored.
@@ -425,7 +425,7 @@ opencomputers {
     # crashes. The price is slightly higher memory consumption, since all
     # loaded files have to be kept in memory (loaded as in when the hard drive
     # is in a computer).
-    bufferChanges=true
+    bufferChanges=false
 
     # The base 'cost' of a single file or directory on a limited file system,
     # such as hard drives. When computing the used space we add this cost to
