Disabled display of energy from LimeLib.

--- a/modpack-files/src/config/limelib.cfg
+++ b/modpack-files/src/config/limelib.cfg
@@ -5,8 +5,8 @@ client {
     B:commandBlockCreativeTab=true
 
     #  [default: true]
-    B:energyConfigHint=true
+    B:energyConfigHint=false
 
     #  [default: false]
-    B:showEnergy=true
+    B:showEnergy=false
 }
